// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createTask — narx snapshoti > USD, eski kurs maydoni 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "11900",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 1785000,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 11900,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "11900",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 238000,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 11900,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "11900",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 59500,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 11900,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > USD, jonli kurs 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "12650.5",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 1897575,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 12650.5,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "12650.5",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 253010,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 12650.5,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "12650.5",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 63252.5,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 12650.5,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > USD, kurs xatosi → 1 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "1",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 150,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 1,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "1",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 20,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 1,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 5,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > USD, mijoz kursi 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "12000",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 1800000,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 12000,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "12000",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 240000,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 12000,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "12000",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 60000,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 12000,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > UZS 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 126000,
  "snapshotCertificatePaymentExchangeRate": "1",
  "snapshotCertificatePayment_amount_original": 126000,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "UZS",
  "snapshotCertificatePayment_exchange_rate": 1,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 40000,
  "snapshotCustomsPaymentExchangeRate": "1",
  "snapshotCustomsPayment_amount_original": 40000,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "UZS",
  "snapshotCustomsPayment_exchange_rate": 1,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 1500000,
  "snapshotDealAmountExchangeRate": "1",
  "snapshotDealAmount_amount_original": 1500000,
  "snapshotDealAmount_amount_uzs": 1500000,
  "snapshotDealAmount_currency": "UZS",
  "snapshotDealAmount_exchange_rate": 1,
  "snapshotDealAmount_exchange_source": "MANUAL",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "1",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 20,
  "snapshotPsrPrice_currency": "UZS",
  "snapshotPsrPrice_exchange_rate": 1,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 5,
  "snapshotWorkerPrice_currency": "UZS",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > davlat to'lovi yo'q 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "12650.5",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 1897575,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 12650.5,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotServiceFeeTransferUzs": 300000,
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > dealAmount 0 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 0,
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "1",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 20,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 1,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 5,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > dealAmount null 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "1",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 20,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 1,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotWorkerPrice": 5,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 5,
  "snapshotWorkerPrice_amount_uzs": 5,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > hiredWorkerRate 0 UZS 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 126000,
  "snapshotCertificatePaymentExchangeRate": "1",
  "snapshotCertificatePayment_amount_original": 126000,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "UZS",
  "snapshotCertificatePayment_exchange_rate": 1,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 40000,
  "snapshotCustomsPaymentExchangeRate": "1",
  "snapshotCustomsPayment_amount_original": 40000,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "UZS",
  "snapshotCustomsPayment_exchange_rate": 1,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "1",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 150,
  "snapshotDealAmount_currency": "UZS",
  "snapshotDealAmount_exchange_rate": 1,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "1",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 20,
  "snapshotPsrPrice_currency": "UZS",
  "snapshotPsrPrice_exchange_rate": 1,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 0,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 0,
  "snapshotWorkerPrice_amount_uzs": 0,
  "snapshotWorkerPrice_currency": "UZS",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;

exports[`createTask — narx snapshoti > hiredWorkerRate USD 1`] = `
{
  "afterHoursDeclaration": false,
  "afterHoursPayer": "CLIENT",
  "branchId": 2,
  "clientId": 3,
  "comments": "izoh",
  "createdById": 7,
  "customsPaymentMultiplier": 1.5,
  "hasPsr": true,
  "snapshotCertificatePayment": 10,
  "snapshotCertificatePaymentExchangeRate": "12600",
  "snapshotCertificatePayment_amount_original": 10,
  "snapshotCertificatePayment_amount_uzs": 126000,
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": 12600,
  "snapshotCertificatePayment_exchange_source": "MANUAL",
  "snapshotContractPaymentType": "CASH_ALL_INCLUSIVE",
  "snapshotCustomsPayment": 3,
  "snapshotCustomsPaymentExchangeRate": "13333.333333333334",
  "snapshotCustomsPayment_amount_original": 3,
  "snapshotCustomsPayment_amount_uzs": 40000,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": 13333.333333333334,
  "snapshotCustomsPayment_exchange_source": "MANUAL",
  "snapshotDealAmount": 150,
  "snapshotDealAmountExchangeRate": "12650.5",
  "snapshotDealAmount_amount_original": 150,
  "snapshotDealAmount_amount_uzs": 1897575,
  "snapshotDealAmount_currency": "USD",
  "snapshotDealAmount_exchange_rate": 12650.5,
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": 20,
  "snapshotPsrPriceExchangeRate": "12650.5",
  "snapshotPsrPrice_amount_original": 20,
  "snapshotPsrPrice_amount_uzs": 253010,
  "snapshotPsrPrice_currency": "USD",
  "snapshotPsrPrice_exchange_rate": 12650.5,
  "snapshotPsrPrice_exchange_source": "MANUAL",
  "snapshotServiceFeeTransferUzs": 300000,
  "snapshotWorkerPrice": 50000,
  "snapshotWorkerPriceExchangeRate": "1",
  "snapshotWorkerPrice_amount_original": 50000,
  "snapshotWorkerPrice_amount_uzs": 50000,
  "snapshotWorkerPrice_currency": "USD",
  "snapshotWorkerPrice_exchange_rate": 1,
  "snapshotWorkerPrice_exchange_source": "MANUAL",
  "title": "T",
}
`;
